main/default/objects/Campaign__c/fields/Department_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Department_Picklist_Values__c</fullName>
    <inlineHelpText>Values automatically populate Department Picklist Values field on communication objects. Enter values as a comma-separated list.</inlineHelpText>
    <label>Department Picklist Values</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>