main/default/objects/Campaign__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Brief introduction to the campaign that displays under the campaign name on the campaign summary page.</inlineHelpText>
    <label>Campaign Summary Page Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>