main/default/objects/Campaign__c/fields/Go_To_Summary_Page__c.field-meta.xml
<CustomField>
    <fullName>Go_To_Summary_Page__c</fullName>
    <formula>HYPERLINK( Campaign_URL__c  , &quot;Summary Page&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Public link published by Compass for viewing the campaign summary page.</inlineHelpText>
    <label>Campaign Summary Page Link</label>
    <type>Text</type>
</CustomField>