main/default/objects/Campaign__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <inlineHelpText>Image address link to the logo to display on the campaign summary page. Upload image to the Notes and Attachments section, and create a public link for the image. Paste the public link into a new browser, right-click, and copy the image address. Paste the link into the Campaign Summary Logo Link field.</inlineHelpText>
    <label>Campaign Summary Logo Link</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>