main/default/objects/Campaign__c/fields/Service_Line_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Service_Line_Picklist_Values__c</fullName>
    <inlineHelpText>Values automatically populate Service Line Picklist Values field on communication objects. Enter values as a comma-separated list.</inlineHelpText>
    <label>Service Line Picklist Values</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>