main/default/objects/Campaign__c/fields/Site_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Site_Picklist_Values__c</fullName>
    <inlineHelpText>Values automatically populate Site Picklist Values field on event, survey, and communication objects. Enter values as a comma-separated list.</inlineHelpText>
    <label>Site Picklist Values</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>